--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/parallax": "^9.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.2",
     "react-scroll": "^1.8.9"
   },
